packages/build/tests/error/clean_stack/fixtures/plugin/plugin.js
module.exports = {
  onInit({
    utils: {
      build: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
